# i3dr_pcl_tools-ros

./: CMakeLists.txt  README.md  README.txt  package.xml
.github/workflows/: ros-build.yml
config/: test_mapping_deimos.rviz  test_mapping_phobos_nuclear.rviz
doc/examples/load/: test.pose
doc/examples/load_list/: test0.pose  test2.pose
install/: i3dr_pcl_https.rosinstall  i3dr_pcl_ssh.rosinstall  i3dr_pcl_tools_https.rosinstall
launch/: SBRI_map.launch  load_point_cloud.launch  load_point_cloud_list.launch  map.launch  mosaic.launch  octomap.launch  point_cloud_to_mesh.launch  save_load_point_cloud.launch  save_pcl.launch  save_point_cloud_list.launch
rviz/: build_point_cloud_map.rviz  load_point_cloud_list.rviz  save_load_point_cloud.rviz  save_point_cloud_list.rviz
src/: crop_pcl.cpp  join_pcl.cpp  load_pcl.cpp  load_pcl_tf_list.cpp  pcl_map.cpp  pcl_reduce.cpp  pcl_to_mesh.cpp  save_image_tf_list.cpp  save_pcl.cpp  save_pcl_tf_list.cpp  transform_pcl_frame.cpp
srv/: set_map_resolution.srv
urdf/: camera_world.urdf.xacro
